--- a/src/app/dashboard/components/side-bar/side-bar.component.html
+++ b/src/app/dashboard/components/side-bar/side-bar.component.html
@@ -1,15 +1,15 @@
-<div class="flex w-full h-full">
+<aside class="flex w-full h-full">
   <div id="sidebar" [ngClass]="{'expanded': isExpanded}" class="sidebar bg-green-500 text-white">
     <nav class="flex flex-col">
       @for (item of menuItems; track $index) {
-        <a class="hover:bg-green-700 m-2 p-2 rounded-xl" [routerLink]="[item.routerLink]" routerLinkActive="bg-green-800" >
+        <a class="hover:bg-green-700 m-2 p-2 rounded-xl" [routerLink]="[item.routerLink]" [routerLinkActive]="['bg-green-800']" >
           <i [class]="item.icon"></i>
           {{ item.title }}
         </a>
       }
     </nav>
   </div>
-  <div id="content" [ngClass]="{'shifted': isExpanded}" class="content">
+  <div id="content" [ngClass]="{'shifted': isExpanded}" class="w-full">
     <ng-content></ng-content>
   </div>
-</div>
+</aside>
