--- a/src/app/dashboard/components/side-bar/side-bar.component.scss
+++ b/src/app/dashboard/components/side-bar/side-bar.component.scss
@@ -3,7 +3,6 @@
   height: 100%;
   width: 250px;
   position: fixed;
-  top: 0;
   left: -250px; /* Hidden by default */
   transition: all 0.3s;
   z-index: 1000;
@@ -11,6 +10,7 @@
 
 #sidebar.expanded {
   left: 0;
+  box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
 }
 
 #content {
@@ -27,6 +27,7 @@
 
   #sidebar.expanded {
     left: 0;
+    box-shadow: none;
   }
 }
 
