--- a/src/app/dashboard/pages/dashboard-page/dashboard-page.component.html
+++ b/src/app/dashboard/pages/dashboard-page/dashboard-page.component.html
@@ -1,3 +1,6 @@
-<app-side-bar>
-  <router-outlet/>
-</app-side-bar>
+<div class="flex flex-col h-full">
+  <app-nav-bar (toggleSideBarClicked)="toggleSideBar()"/>
+  <app-side-bar class="h-full overflow-hidden">
+    <router-outlet></router-outlet>
+  </app-side-bar>
+</div>
