--- a/src/app/dashboard/components/nav-bar/nav-bar.component.html
+++ b/src/app/dashboard/components/nav-bar/nav-bar.component.html
@@ -1,4 +1,4 @@
-<nav class="flex justify-between items-center text-white bg-slate-400 p-2">
+<nav class="flex justify-between items-center text-white bg-green-700 p-2">
 
   <p-button
     (onClick)="toggleSideBar()"
@@ -6,13 +6,15 @@
     icon="pi pi-bars"
     [rounded]="true"/>
 
-  <div class="flex justify-around items-center space-x-2 bg-slate-600 rounded-lg p-2">
+  <h2 class="text-white font-bold">Infofarms</h2>
+
+  <div class="flex justify-around items-center space-x-2 bg-green-900 rounded-lg p-2">
     <p>Usuario</p>
 
     <p-avatar
       label="U"
       styleClass="mr-2"
-      size="large"
+      size="normal"
       [style]="{ 'background-color': '#ece9fc', color: '#2a1261' }"
       shape="circle" />
   </div>
