feat: edit plantation works correctly

--- a/src/app/dashboard/components/dialogForms/plantation-form/plantation-form.component.html
+++ b/src/app/dashboard/components/dialogForms/plantation-form/plantation-form.component.html
@@ -31,6 +31,6 @@
 
   <div class="flex justify-between">
     <p-button>Cancelar</p-button>
-    <p-button (onClick)="createPlantation()">Crear</p-button>
+    <p-button (onClick)="completePlantation()">Aceptar</p-button>
   </div>
 </form>
