--- a/src/app/dashboard/pages/plantations-page/plantations-page.component.html
+++ b/src/app/dashboard/pages/plantations-page/plantations-page.component.html
@@ -7,7 +7,7 @@
     <button
       pButton
       class="text-white bg-green-500 p-2 hover:bg-green-700"
-      (click)="changeDialogVisibility()"
+      (click)="showDialog()"
       icon="pi pi-plus">Alta plantación</button>
   </div>
 
@@ -18,6 +18,7 @@
       <div class="h-full grid gap-4 grid-cols-1 sm:grid-cols-2 md:grid-cols-3 overflow-y-auto">
         @for (plantation of plantations; track $index) {
           <app-plantation-card
+            (onEdit)="showDialog($index)"
             (onDelete)="deletePlantation($event, $index)"
             [plantation]="plantation"/>
         }
@@ -34,6 +35,9 @@
 
 <p-toast/>
 
-<app-creation-dialog title="Plantación">
-  <app-plantation-form (sendFormData)="createPlantation($event)"/>
+<app-creation-dialog [title]="dialogTitle">
+  <app-plantation-form
+    [plantationToEdit]="plantationToEdit"
+    (sendCreateData)="createPlantation($event)"
+    (sendEditData)="editPlantation($event)"/>
 </app-creation-dialog>
