style: number of cardas at grid for each resolution

--- a/src/app/dashboard/components/plantation-card/plantation-card.component.html
+++ b/src/app/dashboard/components/plantation-card/plantation-card.component.html
@@ -1,10 +1,6 @@
 <p-card
   [header]="plantation?.name"
-  styleClass="min-h-[250px]">
-
-  <p class="m-0">
-      {{ plantation?.description }}
-  </p>
+  styleClass="h-[250px]">
 
   <p><span class="font-bold">Localización:</span> {{ plantation?.location }}</p>
 
