--- a/src/app/dashboard/pages/plantations-page/plantations-page.component.html
+++ b/src/app/dashboard/pages/plantations-page/plantations-page.component.html
@@ -15,7 +15,7 @@
     <app-skelleton-squares/>
   } @else {
     @if(plantations?.length) {
-      <div class="h-full grid gap-4 grid-cols-1 sm:grid-cols-2 md:grid-cols-3 overflow-y-auto">
+      <div class="h-full grid gap-4 grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 overflow-y-auto">
         @for (plantation of plantations; track $index) {
           <app-plantation-card
             (onEdit)="showDialog($index)"
