--- a/src/app/dashboard/components/cards/crop-card/crop-card.component.html
+++ b/src/app/dashboard/components/cards/crop-card/crop-card.component.html
@@ -6,7 +6,7 @@
     appNotImage
     class="w-full h-[250px]"
     alt="cropImage"
-    [ngSrc]="crop.imageURL || '../../../../../assets/no-image.png'"
+    [ngSrc]="crop.cropImage || '../../../../../assets/no-image.png'"
     priority="lazy"
     width="200"
     height="50"/>
@@ -15,9 +15,11 @@
     <div class="flex justify-between">
       <div class="space-x-1 items-center">
         <p-button
+          (onClick)="setEditCrop()"
           icon="pi pi-file-edit"
           [text]="true"/>
         <p-button
+          (onClick)="setConfirmation($event)"
           icon="pi pi-trash"
           [text]="true"/>
       </div>
