fix: bug when updatinc crop

--- a/src/app/dashboard/pages/crops-page/crops-page.component.html
+++ b/src/app/dashboard/pages/crops-page/crops-page.component.html
@@ -19,7 +19,8 @@
         @for (crop of crops; track $index) {
           <app-crop-card
             [crop]="crop"
-            (onEdit)="showDialog($index)"/>
+            (onEdit)="showDialog($index)"
+            (onDelete)="deleteCrop($event ,$index)"/>
         }
       </div>
     } @else {
