feat: basic structure of plantation expanded page

--- a/src/app/dashboard/components/cards/plantation-card/plantation-card.component.html
+++ b/src/app/dashboard/components/cards/plantation-card/plantation-card.component.html
@@ -22,6 +22,7 @@
       </div>
       <button
         pButton
+        [routerLink]="['/dashboard/plantation/'+ plantation!.id]"
         class="bg-green-500 text-white p-1">Ver más</button>
     </div>
   </ng-template>
