--- a/src/app/dashboard/pages/plantation-expanded-page/plantation-expanded-page.component.html
+++ b/src/app/dashboard/pages/plantation-expanded-page/plantation-expanded-page.component.html
@@ -15,11 +15,11 @@
     [scrollDirection]="'both'">
     <ng-template pTemplate="caption">
         <div class="flex w-full items-center justify-between">
-            <p>Cultivos de la plantación: {{ plantation.cropData.totalElements }}</p>
+            <p>Cultivos de la plantación: {{ totalCrops }}</p>
 
             <button
               pButton
-              (click)="dialog.changeVisibility()"
+              (click)="showDialog()"
               class="text-white bg-green-500 p-2 hover:bg-green-700"
               icon="pi pi-plus">Añadir cultivo</button>
         </div>
@@ -34,9 +34,10 @@
             <th>Kilos</th>
             <th>Fecha de plantación</th>
             <th>Fecha de recolección</th>
+            <th>Editar</th>
         </tr>
     </ng-template>
-    <ng-template pTemplate="body" class=" overflow-auto" let-cropData>
+    <ng-template pTemplate="body" class=" overflow-auto" let-cropData let-rowIndex="rowIndex">
         <tr>
             <td><img [ngSrc]="cropData.crop.cropImage || '../../../../assets/no-image.png'" [alt]="cropData.crop.cropName" width="100" height="100" priority class="shadow-4" /></td>
             <td>{{cropData.crop.cropName}}</td>
@@ -45,6 +46,12 @@
             <td>{{cropData.kilos}} Kg</td>
             <td>{{ cropData.plantating_date || 'Sin fecha' }}</td>
             <td>{{ cropData.ollection_date || 'Sin fecha' }}</td>
+            <td>
+              <button
+                (click)="showDialog(rowIndex)"
+                icon="pi pi-pencil"
+                pButton></button>
+            </td>
         </tr>
     </ng-template>
   </p-table>
@@ -61,7 +68,8 @@
 
 <p-toast/>
 
-<app-creation-dialog [title]="'Datos de cultivo'">
-  <app-crop-data-form
-    (sendCreation)="createCropData($event)"/>
-</app-creation-dialog>
+<app-crop-data-form
+    [title]="dialogTitle"
+    [cropDataToEdit]="cropDataToEdit"
+    (sendCreation)="createCropData($event)"
+    (sendUpdate)="editCropData($event)"/>
