style: aside now shows at 1024 width

--- a/src/app/dashboard/pages/plantation-expanded-page/plantation-expanded-page.component.html
+++ b/src/app/dashboard/pages/plantation-expanded-page/plantation-expanded-page.component.html
@@ -14,7 +14,7 @@
     [scrollable]="true"
     [scrollDirection]="'both'">
     <ng-template pTemplate="caption">
-        <div class="flex w-full items-center justify-between">
+        <div class="flex flex-col sm:flex-row w-[500px] items-center justify-between">
             <p>Cultivos de la plantación: {{ totalCrops }}</p>
 
             <button
