--- a/src/app/dashboard/components/nav-bar/nav-bar.component.html
+++ b/src/app/dashboard/components/nav-bar/nav-bar.component.html
@@ -2,7 +2,7 @@
 
   <p-button
     (onClick)="toggleSideBar()"
-    class="md:hidden"
+    class="lg:hidden"
     icon="pi pi-bars"
     [rounded]="true"/>
 
