--- a/src/app/dashboard/pages/plantations-page/plantations-page.component.html
+++ b/src/app/dashboard/pages/plantations-page/plantations-page.component.html
@@ -1,6 +1,6 @@
 
 
-<div class="flex flex-col w-full h-full">
+<div class="flex flex-col w-full h-full p-2">
 
   <div class="flex flex-col space-y-2 sm:flex-row w-full justify-between items-center mb-4">
     <h2 class="font-bold text-5xl">Plantaciones</h2>
