--- a/src/app/dashboard/pages/plantation-expanded-page/plantation-expanded-page.component.html
+++ b/src/app/dashboard/pages/plantation-expanded-page/plantation-expanded-page.component.html
@@ -15,27 +15,47 @@
     [scrollable]="true"
     [scrollDirection]="'both'">
     <ng-template pTemplate="caption">
-        <div class="flex flex-col sm:flex-row w-[500px] items-center justify-between">
-            <p>Cultivos de la plantación: {{ totalCrops }}</p>
+        <div class="flex flex-col sm:flex-row w-full items-center justify-between">
+          <p>Cultivos de la plantación: {{ totalCrops }}</p>
 
+          <div class="flex">
+            @switch (createOrderStep) {
+              @case (0) {
+                <button
+                  pButton
+                  (click)="continueOrderCreation()"
+                  class="text-white bg-green-500 p-2 hover:bg-green-700 mr-2"
+                  icon="pi pi-book">Crear pedido</button>
 
+                  <button
+                    pButton
+                    (click)="showDialog()"
+                    class="text-white bg-green-500 p-2 hover:bg-green-700"
+                    icon="pi pi-plus">Añadir cultivo</button>
+              }
+              @case (1) {
+                <div class="flex gap-2">
+                  <button
+                    pButton
+                    (click)="continueOrderCreation()"
+                    class="text-white bg-green-500 p-2 hover:bg-green-700">Avanzar</button>
 
-            <button
-              pButton
-              (click)="showDialog()"
-              class="text-white bg-green-500 p-2 hover:bg-green-700"
-              icon="pi pi-plus">Crear pedido</button>
-
-            <button
-              pButton
-              class="text-white bg-green-500 p-2 hover:bg-green-700"
-              icon="pi pi-plus">Añadir cultivo</button>
+                  <button
+                    pButton
+                    (click)="cancelOrder()"
+                    class="border border-green-500 text-green-500 p-2 hover:border-green-700 hover:text-green-700">Cancelar</button>
+                </div>
+              }
+            }
+          </div>
         </div>
     </ng-template>
 
     <ng-template pTemplate="header">
         <tr>
-            <th style="width: 4rem"><p-tableHeaderCheckbox/></th>
+            @if (createOrderStep > 0) {
+              <th style="width: 4rem"><p-tableHeaderCheckbox/></th>
+            }
             <th>Imagen</th>
             <th>Nombre</th>
             <th>Coste</th>
@@ -48,9 +68,11 @@
     </ng-template>
     <ng-template pTemplate="body" class=" overflow-auto" let-cropData let-rowIndex="rowIndex">
         <tr>
-            <td>
-              <p-tableCheckbox [value]="cropData" />
-            </td>
+            @if (createOrderStep > 0) {
+              <td>
+                <p-tableCheckbox [value]="cropData" />
+              </td>
+            }
             <td><img [ngSrc]="cropData.crop.cropImage || '../../../../assets/no-image.png'" [alt]="cropData.crop.cropName" width="100" height="100" priority class="shadow-4" /></td>
             <td>{{cropData.crop.cropName}}</td>
             <td>{{cropData.cost}}</td>
@@ -91,3 +113,5 @@
     [cropDataToEdit]="cropDataToEdit"
     (sendCreation)="createCropData($event)"
     (sendUpdate)="editCropData($event)"/>
+
+<app-create-order-from-plantation [cropDataSelected]="selectedCrops"/>
