--- a/src/app/dashboard/components/dialogForms/create-order-from-plantation/create-order-from-plantation.component.html
+++ b/src/app/dashboard/components/dialogForms/create-order-from-plantation/create-order-from-plantation.component.html
@@ -1,40 +1,49 @@
-<p-dialog
-  header="Crear pedido"
-  [modal]="true"
-  [(visible)]="visible"
-  styleClass="w-fit h-fit bg-slate-500">
-  <form  class="h-fit flex flex-col mt-5 space-y-3">
+<form [formGroup]="formKilos" class="h-fit flex flex-col mt-5 space-y-3">
 
-    <div class="w-fit h-[625px] space-y-2 p-2 overflow-y-scroll">
-      @for (cropData of cropDataSelected; track $index) {
-        <form>
+  <div class="w-fit max-h-[625px] space-y-2 p-2 overflow-y-auto">
+
+    <div formArrayName="kilos" class="flex flex-col space-y-4">
+      @for (item of kilos.controls; track $index) {
+
+        <div [formGroupName]="$index">
           <div class="flex items-center rounded-xl p-3 w-full h-fit bg-gray-200">
             <div class="flex flex-col p-3 items-center">
-              <img [ngSrc]="cropData.crop.cropImage || '../../../../../../../assets/no-image.png'" alt="crop_img" width="60" height="60">
-              <p class="font-bold">{{ cropData.crop.cropName }}</p>
+              <img [ngSrc]="cropDataSelected[$index].crop.cropImage || '../../../../../../../assets/no-image.png'" alt="crop_img" width="60" height="60">
+              <p class="font-bold">{{ cropDataSelected[$index].crop.cropName }}</p>
             </div>
-            <div class="flex flex-col">
+            <div class="flex flex-col items-center">
               <label for="username">Cantidad Kilogramos:</label>
               <p-inputNumber
+                [ngClass]="{'border border-red-500 rounded': kilos.at($index).invalid && (kilos.at($index).dirty || kilos.at($index).touched)}"
+                formControlName="kilo"
                 [minFractionDigits]="2"
                 [maxFractionDigits]="5"
                 suffix="/Kg"
                 class="h-[40px]"></p-inputNumber>
                 <div class="flex justify-between items-center m-2">
-                  <p>Kilos: {{ cropData.kilos }}</p>
-                  <p>Precio: {{ cropData.kilo_price }}€/Kg</p>
+                  <p>Kilos: {{ cropDataSelected[$index].kilos }}</p>
+                  <p>Precio: {{ cropDataSelected[$index].kilo_price }}€/Kg</p>
                 </div>
+
+                @if (kilos.at($index).invalid && kilos.at($index).dirty) {
+                  <p class="text-sm text-red-500">No hay suficientes Kilos</p>
+                }
             </div>
           </div>
-        </form>
+        </div>
       }
     </div>
 
-    <button
-      (click)="completeOrder()"
-      class="flex justify-center rounded-md bg-green-500 text-white w-full p-2"
-      pButton>
-      Aceptar
-    </button>
-  </form>
-</p-dialog>
+    @for (cropData of cropDataSelected; track $index) {
+
+    }
+  </div>
+
+  <button
+    type="button"
+    (click)="completeOrder()"
+    class="flex justify-center rounded-md bg-green-500 text-white w-full p-2"
+    pButton>
+    Aceptar
+  </button>
+</form>
