feat: fields of order form at create-order-form added

--- a/src/app/dashboard/components/dialogForms/create-order-from-plantation/create-order-from-plantation.component.html
+++ b/src/app/dashboard/components/dialogForms/create-order-from-plantation/create-order-from-plantation.component.html
@@ -1,6 +1,52 @@
-<form [formGroup]="formKilos" class="h-fit flex flex-col mt-5 space-y-3">
+<form [formGroup]="formKilos" class="h-fit flex flex-col mt-5 space-y-7">
 
-  <div class="w-fit max-h-[625px] space-y-2 p-2 overflow-y-auto">
+  <p-floatLabel class="w-full">
+    <input
+      id="costumer"
+      formControlName="costumer"
+      pInputText
+      class="bg-gray-200"
+      [style]="{'width': '100%', 'padding':'10px'}"/>
+    <label for="costumer">Cliente*</label>
+  </p-floatLabel>
+
+  <p-floatLabel class="w-full">
+    <p-calendar
+      id="orderDate"
+      formControlName="orderDate"
+      appendTo="body"
+      [iconDisplay]="'input'"
+      dateFormat="dd/mm/yy"
+      [showIcon]="true"
+      inputStyleClass="w-full bg-gray-200 p-2"
+      styleClass="w-full"
+      inputId="icondisplay" />
+      <label for="orderDate">Fecha de pedido</label>
+  </p-floatLabel>
+
+  <p-floatLabel class="w-full">
+    <p-calendar
+      id="deliveryDate"
+      formControlName="deliveryDate"
+      appendTo="body"
+      [iconDisplay]="'input'"
+      dateFormat="dd/mm/yyyy"
+      inputStyleClass="w-full bg-gray-200 p-2"
+      styleClass="w-full"
+      [showIcon]="true"
+      inputId="icondisplay"/>
+      <label for="deliveryDate">Fecha de entrega</label>
+  </p-floatLabel>
+
+  <div class="flex space-x-2">
+    <p-checkbox
+        formControlName="paid"
+        value="Pagado"
+        inputId="OrderPlantationPaid" />
+    <label for="OrderPlantationPaid">Pagado</label>
+  </div>
+
+  <div class="w-fit max-h-[350px] space-y-2 p-2 overflow-y-auto">
 
     <div formArrayName="kilos" class="flex flex-col space-y-4">
       @for (item of kilos.controls; track $index) {
