--- a/src/app/dashboard/components/dialogForms/crop-data-form/crop-data-form.component.html
+++ b/src/app/dashboard/components/dialogForms/crop-data-form/crop-data-form.component.html
@@ -70,6 +70,19 @@
         styleClass="w-full"/>
     </div>
 
+    <div class="w-full">
+      <label for="hectare">Hectárea</label>
+      <p-inputNumber
+        id="hectare"
+        formControlName="hectare"
+        mode="decimal"
+        [minFractionDigits]="2"
+        [maxFractionDigits]="5"
+        inputStyleClass="h-[40px] w-full bg-gray-200 p-2"
+        class="w-full"
+        styleClass="w-full"/>
+    </div>
+
     <div class="flex flex-col pt-3 space-y-6">
       <p-floatLabel>
         <p-calendar
