feat: the user can choose between m2 and ha for the surface

--- a/src/app/dashboard/pages/plantation-expanded-page/plantation-expanded-page.component.html
+++ b/src/app/dashboard/pages/plantation-expanded-page/plantation-expanded-page.component.html
@@ -61,8 +61,8 @@
             <th>Coste</th>
             <th>Precio/kg</th>
             <th>Kilos</th>
-            <th>Hectáreas</th>
-            <th>Kilos/Hectárea</th>
+            <th>Superficie</th>
+            <th>Kilos/Superficie</th>
             <th>Fecha de plantación</th>
             <th>Fecha de recolección</th>
             <th>Acciones</th>
@@ -80,8 +80,8 @@
             <td>{{cropData.cost}}</td>
             <td>{{cropData.kilo_price}} €/Kg</td>
             <td>{{cropData.kilos | number:'1.2-2'}} Kg</td>
-            <td>{{ cropData.hectare | number:'1.2-2'}}</td>
-            <td>{{ cropData.kilos_hectare | number:'1.2-2' }}/Kg</td>
+            <td>{{ cropData.surface | number:'1.2-2'}} {{ cropData.type_surface | surfaceSymbol }}</td>
+            <td>{{ cropData.kilos_surface | number:'1.2-2' }} Kg/{{ cropData.type_surface | surfaceSymbol }}</td>
             <td>{{ cropData.plantating_date || 'Sin fecha' }}</td>
             <td>{{ cropData.ollection_date || 'Sin fecha' }}</td>
             <td>
