--- a/src/app/dashboard/components/dialogForms/crop-data-form/crop-data-form.component.html
+++ b/src/app/dashboard/components/dialogForms/crop-data-form/crop-data-form.component.html
@@ -70,17 +70,28 @@
         styleClass="w-full"/>
     </div>
 
+
+
     <div class="w-full">
-      <label for="hectare">Hectárea</label>
-      <p-inputNumber
-        id="hectare"
-        formControlName="hectare"
+      <label for="surface">Superficie</label>
+      <div class="flex items-center">
+        <p-inputNumber
+        id="surface"
+        formControlName="surface"
         mode="decimal"
         [minFractionDigits]="2"
         [maxFractionDigits]="5"
         inputStyleClass="h-[40px] w-full bg-gray-200 p-2"
         class="w-full"
         styleClass="w-full"/>
+
+        <p-toggleButton
+          formControlName="unitType"
+          styleClass="border-2 border-green-500 h-[40px] ml-1"
+          class="text-sm"
+          onLabel="ha"
+          offLabel="m²" />
+      </div>
     </div>
 
     <div class="flex flex-col pt-3 space-y-6">
